2011-12-22  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (extended_capabilities) [CERTDO_SUPPORT]:
	conditionalize.

2011-12-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_get_data) [CERTDO_SUPPORT]: ifdef out.

	* src/gnuk.ld.in (.gnuk_ch_certificate): Only valid
	when --enable-certdo.

	* src/flash.c (flash_check_blank) [CERTDO_SUPPORT]: ifdef out.
	(flash_erase_binary) [CERTDO_SUPPORT]: Likewise.
	(flash_write_binary) [CERTDO_SUPPORT]: Likewise.

	* src/configure (certdo): New.
	(--enable-certdo, --disable-certdo): New options.
	Remove cheking for /dev/random.

	* src/config.h.in (@CERTDO_DEFINE@): New.

2011-12-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_msc.c (msc_handle_command): SCSI_START_STOP_UNIT command
	with stop/eject/close means cancelling pinentry.

	* src/pin-dnd.c (pinpad_finish_entry, parse_directory_sector):
	Implement "cancel".
	(pinpad_getline): Likewise.
	(msc_scsi_stop): New.

2011-12-16  Niibe Yutaka  <gniibe@fsij.org>

	* tool/gnuk_put_binary_libusb.py (gnuk_token.cmd_select_openpgp):
	Fix apdu parameter.

	* tool/gnuk_put_binary.py (GnukToken.cmd_select_openpgp): Ditto.

	* tool/pinpad-test.py: New.

2011-12-14  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.16.

	* src/usb_desc.c (gnukStringSerial): Updated.

	* boards/STM8S_DISCOVERY/board.h, board.c: Fix for PINPAD_SUPPORT.
	* boards/STBEE_MINI/board.h, board.c: Likewise.
	* boards/STBEE/board.h, board.c: Likewise.
	* boards/FST_01/board.c: Likewise.

2011-12-13  Niibe Yutaka  <gniibe@fsij.org>

	Add pinpad DND support.
	* src/Makefile.in (CSRC) [ENABLE_PINPAD]: Add usb_msc.c.
	* src/configure (pinpad): Add dnd support.
	* src/gnuk.h [PINPAD_DND_SUPPORT]: Add declarations.
	* src/main.c (STDOUTthread): Add PUSH packet.
	(main) [PINPAD_DND_SUPPORT]: Call msc_init.
	* src/usb_conf.h (EP_NUM): Add the case of PINPAD_DND_SUPPORT.
	(ENDP6_TXADDR, ENDP7_RXADDR): New.
	(ENDP4_TXADDR, ENDP5_RXADDR): Changed for smaller buffer.